Code added to process emp data  Topic1 to Topic2

--- a/kafkaspringboot/src/main/resources/application.yaml
+++ b/kafkaspringboot/src/main/resources/application.yaml
@@ -13,4 +13,5 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 tpd:
-  topic-name: Topic1
+  topic-one: Topic1
+  topic-two: Topic2
